--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   }
