--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.31.0",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   }
