--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "eslint-plugin-astro": "^0.31.0",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
