--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/vue": "^4.0.7",
     "astro": "^4.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vue": "^3.4.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.18.0",
