--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.31.0",
+    "eslint-plugin-vue": "^9.19.2",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   },
