--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.3.4",
     "@astrojs/vue": "^4.0.7",
+    "@fontsource/noto-serif": "^5.0.18",
+    "@fontsource/roboto": "^5.0.8",
+    "@fontsource/roboto-mono": "^5.0.16",
     "astro": "^4.1.1",
+    "normalize.css": "^8.0.1",
     "typescript": "^5.3.3",
     "vue": "^3.4.4"
   },
@@ -23,6 +27,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.31.0",
     "eslint-plugin-vue": "^9.19.2",
+    "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3"
   },
