--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-vue": "^9.19.2",
     "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.3"
+    "prettier-plugin-astro": "^0.12.3",
+    "stylelint": "^16.1.0",
+    "stylelint-config-recommended": "^14.0.0"
   },
   "packageManager": "yarn@4.0.2"
 }
