--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@fontsource/roboto-mono": "^5.0.16",
     "astro": "^4.1.1",
+    "date-fns": "^3.1.0",
     "normalize.css": "^8.0.1",
     "typescript": "^5.3.3",
     "vue": "^3.4.5"
