--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fontsource/roboto-mono": "^5.0.16",
     "astro": "^4.1.1",
     "astro-seo-meta": "^4.1.0",
-    "date-fns": "^3.1.0",
+    "date-fns": "^3.3.0",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "typescript": "^5.3.3",
     "vue": "^3.4.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
