--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/mdx": "^2.1.1",
     "@astrojs/vue": "^4.0.8",
     "@fontsource/noto-serif": "^5.0.18",
     "@fontsource/roboto": "^5.0.8",
